# saypi-userscript

./: .env  .env.example  .env.production  .env.production.example  .gitignore  .gitleaks.toml  .windsurfrules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PR_156_Review.md  README.md  SETTINGS_REFACTOR_STATUS.md  UNIVERSAL_DICTATION_SUMMARY.md  app.py  copy-onnx-files.js  i18n-check-messages.cjs  i18n-clear-keys.py  i18n-delete-keys.py  i18n-descriptions.py  i18n-placeholders.py  i18n-translate-all.py  i18n-translate-chrome.sh  i18n-translate-release-text.py  i18n-validate-messages.cjs  i18n-validate.cjs  index.html  manifest.json  ngrok.yml  package-chrome-extension.sh  package-extension.sh  package-firefox-extension.sh  package-lock.json  package-safari-extension.sh  package.json  pyproject.toml  received_audio.webm  saypi.js  saypi.user.js  (+11 more)
.cursor/: mcp.json
.husky/: pre-commit
.wxt/: .wxt
certificates/: localhost-key.pem  localhost.pem
doc/: 60db-integration.md  BROWSER_COMPATIBILITY.md  CSP_BYPASS_IMPLEMENTATION.md  DUAL_PHASE_TRANSCRIPTION.md  LEXICAL_EDITOR_SUPPORT.md  MANUAL_TEST_EMPTY_TRANSCRIPTION.md  Modules.md  PKCE_AUTH_SPEC.md  PR-claude-voice-menu.md  UNIVERSAL_DICTATION_SUMMARY.md  WEB_STORE_PERMISSIONS.md  auth.md  autonomous-bootstrap.md  autonomous-dev-loop.md  codebase-caution-map.md  constitution-audit.md  e2e-dictation-sweep.md  e2e-host-sweep.md  event sequences.md  layer35-real-host-loop.md  layer4-cdp-real-host-loop.md  personalisation_feature_plan.md  post-release-monitoring.md  preact-component-conventions.md  scheduled-routines.md  (+3 more)
(+901 files in other folders)
